device/vr/vr_device_manager.h
@@ -43,7 +43,9 @@ class VRDeviceManager {
 
   DEVICE_VR_EXPORT unsigned int GetNumberOfConnectedDevices();
 
-  void ListeningForActivateChanged(bool listening);
+  void ListeningForActivateChanged(bool listening, VRServiceImpl* service);
+
+  bool IsMostRecentlyListeningForActivate(VRServiceImpl* service);
 
  private:
   friend class VRDeviceManagerTest;
@@ -77,6 +79,7 @@ class VRDeviceManager {
   bool vr_initialized_;
 
   std::set<VRServiceImpl*> services_;
+  VRServiceImpl* most_recently_listening_for_activate_ = nullptr;
 
   // For testing. If true will not delete self when consumer count reaches 0.
   bool keep_alive_;
