device/vr/vr_display_impl.cc
@@ -6,6 +6,7 @@
 
 #include "base/bind.h"
 #include "device/vr/vr_device.h"
+#include "device/vr/vr_device_manager.h"
 #include "device/vr/vr_service_impl.h"
 
 namespace device {
@@ -45,6 +46,9 @@ void VRDisplayImpl::OnFocus() {
 }
 
 void VRDisplayImpl::OnActivate(mojom::VRDisplayEventReason reason) {
+  VRDeviceManager* manager = VRDeviceManager::GetInstance();
+  if (!manager->IsMostRecentlyListeningForActivate(service_))
+    return;
   client_->OnActivate(reason);
 }
 
